@@ -17,6 +17,7 @@
 package org.apache.solr.search.join;
 
 import org.apache.solr.SolrTestCaseJ4;
+import org.apache.solr.common.SolrException;
 import org.apache.solr.common.params.SolrParams;
 import org.junit.BeforeClass;
 import org.junit.Test;
@@ -25,7 +26,6 @@ public class GraphQueryTest extends SolrTestCaseJ4 {
   
   @BeforeClass
   public static void beforeTests() throws Exception {
-    
     initCore("solrconfig.xml","schema_latest.xml");
   }
 
@@ -44,6 +44,9 @@ public class GraphQueryTest extends SolrTestCaseJ4 {
     doGraph( params("node_id","node_fps", "edge_id","edge_fps") );
     doGraph( params("node_id","node_dp",  "edge_id","edge_dps") );
     doGraph( params("node_id","node_dps", "edge_id","edge_dps") );
+
+    // string with indexed=false and docValues=true
+    doGraph( params("node_id","node_sdN", "edge_id","edge_sdsN") );
   }
 
   public void doGraph(SolrParams p) throws Exception {
@@ -118,4 +121,23 @@ public class GraphQueryTest extends SolrTestCaseJ4 {
     );
   }
   
+  @Test
+  public void testGraphQueryParserValidation() throws Exception {
+    // from schema field existence
+    doGraphQuery( params("node_id","node_nothere",  "edge_id","edge_ss",
+        "message", "field node_nothere not defined in schema", "errorCode", String.valueOf(SolrException.ErrorCode.BAD_REQUEST.code)) );
+
+    // to schema field existence
+    doGraphQuery( params("node_id","node_s",  "edge_id","edge_notthere",
+        "message", "field node_nothere not defined in schema", "errorCode", String.valueOf(SolrException.ErrorCode.BAD_REQUEST.code)) );
+  }
+  
+  public void doGraphQuery(SolrParams p) throws Exception {
+    String message = p.get("message");
+    int errorCode = p.getInt("errorCode", SolrException.ErrorCode.UNKNOWN.code);
+    
+    assertQEx(message , req(p, "q","{!graph from=${node_id} to=${edge_id} returnRoot=false maxDepth=1}id:doc_1")
+        , errorCode
+    );
+  }
 }
